# cmake-auto-version

./: AutoVersion.cmake  CMakeLists.txt  README.md  main.cpp  version.h
